// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when rendering a deprecated directive with 0 arguments renders correctly  1`] = `
<div>
  <p>
    <em>
      Deprecated
    </em>
    : 
    <ComponentFactory
      nodeData={
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "position": Object {
                    "start": Object {
                      "line": 679,
                    },
                  },
                  "type": "text",
                  "value": "replicationFactor",
                },
              ],
              "position": Object {
                "start": Object {
                  "line": 679,
                },
              },
              "type": "literal",
            },
            Object {
              "position": Object {
                "start": Object {
                  "line": 679,
                },
              },
              "type": "text",
              "value": " is deprecated. Use
",
            },
            Object {
              "children": Array [
                Object {
                  "position": Object {
                    "start": Object {
                      "line": 679,
                    },
                  },
                  "type": "text",
                  "value": "replicationSpecs",
                },
              ],
              "position": Object {
                "start": Object {
                  "line": 679,
                },
              },
              "type": "literal",
            },
            Object {
              "position": Object {
                "start": Object {
                  "line": 679,
                },
              },
              "type": "text",
              "value": ".",
            },
          ],
          "position": Object {
            "start": Object {
              "line": 679,
            },
          },
          "type": "paragraph",
        }
      }
      skipPTag={true}
    />
  </p>
</div>
`;

exports[`when rendering a versionadded directive with one argument renders correctly  1`] = `
<div>
  <p>
    <em>
      New
       in version 
      <ComponentFactory
        nodeData={
          Object {
            "position": Object {
              "start": Object {
                "line": 2,
              },
            },
            "type": "text",
            "value": "2.2",
          }
        }
      />
    </em>
    .
  </p>
</div>
`;

exports[`when rendering a versionchanged directive with two arguments renders correctly  1`] = `
<div>
  <p>
    <em>
      Changed
       in version 
      <ComponentFactory
        nodeData={
          Object {
            "position": Object {
              "start": Object {
                "line": 468,
              },
            },
            "type": "text",
            "value": "2.2",
          }
        }
      />
    </em>
    :
     
    <ComponentFactory
      key="0"
      nodeData={
        Object {
          "position": Object {
            "start": Object {
              "line": 468,
            },
          },
          "type": "text",
          "value": "To bind to multiple IP addresses, enter a list of comma separated values.",
        }
      }
    />
  </p>
</div>
`;
